--- a/app.css
+++ b/app.css
@@ -15,14 +15,18 @@
 }
 
 
+html {
+  height: 100%; 
+}
+
 /* starting point for phone view */
 @media screen and (min-width:320px) {
   body {
     margin: auto;
     text-align: center; 
-    background-image: url(https://images.pexels.com/photos/1202723/pexels-photo-1202723.jpeg);
+    background-image: url(https://images.pexels.com/photos/32307/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     background-repeat: no-repeat; 
-    background-size: auto;
+    background-size: 100% 100%;
   }
   
   #next-question, #submit-button, #show-results, #restart-quiz-button, #start-quiz {
@@ -31,29 +35,29 @@
     background-color: white;
     padding: 10px;
     border-radius: 25px;
-    font-size: 24px;
+    font-size: 18px;
   } 
   
   h1 {
-    font-size: 50px;
+    font-size: 36px;
     font-style: italic;
     color: white;
   }
   
   h2 {
-    font-size: 48px;
+    font-size: 32px;
     font-style: italic;
     color: black;
   }
   
   h3 {
-    font-size: 38px;
+    font-size: 28px;
     font-style: italic;
     color: white;
   }
   
   main {
-    font-size: 20px;
+    font-size: 18px;
   }
   
   input[type="radio"] {
@@ -65,5 +69,31 @@
     background:#ffecdb;
     opacity: 0.8;
     border-radius: 100px;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .main-container {
+    margin-top: 300px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  header {
+    margin-top: 200px;
+  }
+}
+
+@media screen and (min-width:1024px) {
+  h1 {
+    font-size: 58px;
+  }
+  h2 {
+    font-size: 52px;
+  }
+  h3 {
+    font-size: 48px; 
+  }
+  main {
+    font-size: 28px;
   }
 }
