--- a/app.css
+++ b/app.css
@@ -25,7 +25,7 @@ html {
     margin: auto;
     text-align: center; 
     background-image: url(https://images.pexels.com/photos/32307/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-    background-repeat: no-repeat; 
+    background-repeat: repeat; 
     background-size: 100% 100%;
   }
   
