--- a/app.css
+++ b/app.css
@@ -14,7 +14,6 @@
   cursor: pointer;
 }
 
-
 html {
   height: 100%; 
 }
@@ -23,9 +22,11 @@ html {
 @media screen and (min-width:320px) {
   body {
     margin: auto;
-    text-align: center; 
+    text-align: center;
     background-image: url(https://images.pexels.com/photos/32307/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     background-repeat: no-repeat; 
+    background-size: cover;
+    background-attachment: fixed;
     background-size: 100% 100%;
   }
   
@@ -59,7 +60,7 @@ html {
   main {
     font-size: 18px;
   }
-  
+
   input[type="radio"] {
     vertical-align: middle;
   }
@@ -68,18 +69,17 @@ html {
     margin: auto;
     background:#ffecdb;
     opacity: 0.8;
-    border-radius: 100px;
+    border-radius: 90px;
   }
 }
 
 @media screen and (min-width:768px) {
   .main-container {
-    margin-top: 300px;
     margin-left: 50px;
     margin-right: 50px;
   }
   header {
-    margin-top: 200px;
+    margin-top: 300px;
   }
 }
 
