--- a/app.css
+++ b/app.css
@@ -18,7 +18,6 @@ html {
   height: 100%; 
 }
 
-/* starting point for phone view */
 @media screen and (min-width:320px) {
   body {
     margin: auto;
@@ -33,12 +32,20 @@ html {
   #next-question, #submit-button, #show-results, #restart-quiz-button, #start-quiz {
     text-align: center; 
     color: black;
-    background-color: white;
     padding: 10px;
     border-radius: 25px;
     font-size: 18px;
   } 
   
+  header {
+    margin: auto;
+    background:#000000;
+    opacity: 0.8;
+    border-radius: 40px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
   h1 {
     font-size: 36px;
     font-style: italic;
@@ -48,7 +55,7 @@ html {
   h2 {
     font-size: 32px;
     font-style: italic;
-    color: black;
+    color: white;
   }
   
   h3 {
