--- a/app.css
+++ b/app.css
@@ -32,6 +32,7 @@ html {
   #next-question, #submit-button, #show-results, #restart-quiz-button, #start-quiz {
     text-align: center; 
     color: black;
+    background-color: white; 
     padding: 10px;
     border-radius: 25px;
     font-size: 18px;
