change header margin

--- a/app.css
+++ b/app.css
@@ -33,7 +33,7 @@ html {
   } 
   
   header {
-    margin: auto;
+    margin: 10%;
     background:#000000;
     opacity: 0.8;
     border-radius: 40px;
