--- a/app.css
+++ b/app.css
@@ -33,7 +33,8 @@ html {
   } 
   
   header {
-    margin:20%;
+    margin-left:10%;
+    margin-right:10%;
     background:#000000;
     opacity: 0.8;
     border-radius: 40px;
