--- a/app.css
+++ b/app.css
@@ -13,9 +13,25 @@ html {
 
 .main-container{
 margin-bottom:20%;
+/*display:flex;*/
+flex-direction:column;
+justify-content: center;
+align-items: center;
+}
+#start-page{
+  text-align:center;
+}
+
+input[type=radio] * {
+  color:red;
 }
 
 
+
+
+#correct{
+  margin-right:50%;
+}
 
 @media screen and (min-width:320px) {
   body {
@@ -36,6 +52,8 @@ margin-bottom:20%;
     border-radius: 25px;
     font-size: 18px;
     cursor: pointer;
+  
+    /*8margin-left:30%;*/
   } 
   
   header {
@@ -54,7 +72,7 @@ margin-bottom:20%;
     color: white;
   }
   
-  h2 
+  h2 {
     font-size: 32px;
     font-style: italic;
     color: white;
@@ -70,12 +88,14 @@ margin-bottom:20%;
     font-size: 18px;
   }
 
-  input[type="radio"] {
-    vertical-align: middle;
+  #incorrect{
+    text-align: center;
   }
   
+  
   .main-container {
-    margin: 10%;
+    margin-left: 10%;
+    margin-right:10%;
     background:#ffecdb;
     opacity: 0.8;
     border-radius: 90px;
@@ -89,6 +109,7 @@ margin-bottom:20%;
   }
 
 }
+
 
 @media screen and (min-width:1024px) {
   h1 {
