--- a/app.css
+++ b/app.css
@@ -12,19 +12,11 @@ html {
 }
 
 .main-container{
-margin-bottom:20%;
-/*display:flex;*/
-flex-direction:column;
-justify-content: center;
-align-items: center;
-}
-#start-page{
-  text-align:center;
+margin-bottom:10%;
+
 }
 
-/*input[type=radio]  {
-  color:red;
-}*/
+
 
 fieldset{
   
@@ -34,9 +26,7 @@ margin-left:40%;
 }
 
 
-#correct{
-  margin-right:50%;
-}
+
 
 @media screen and (min-width:320px) {
   body {
@@ -57,6 +47,7 @@ margin-left:40%;
     border-radius: 25px;
     font-size: 18px;
     cursor: pointer;
+    margin-bottom:10px;
   
     /*8margin-left:30%;*/
   } 
