--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@ fieldset{
   
   border:none;
   text-align:left;
-margin-left:40%;
+margin-left:30%;
 }
 
 
@@ -106,6 +106,9 @@ margin-left:40%;
 
 }
 
+fieldset{
+  margin-left:40%;
+}
 
 @media screen and (min-width:1024px) {
   h1 {
