--- a/app.css
+++ b/app.css
@@ -22,7 +22,8 @@ fieldset{
   border:none;
 text-align:left;
 margin-left:20%;
-color:red;
+color:green;
+margin-top:5%;
 }
 
 
@@ -106,9 +107,9 @@ color:red;
 
 }
 
-/*fieldset{
+fieldset{
   margin-left:40%;
-}*/
+}
 
 @media screen and (min-width:1024px) {
   h1 {
@@ -122,5 +123,8 @@ color:red;
   }
   main {
     font-size: 28px;
+  }
+  fieldset{
+    color:purple;
   }
 }
