add more margin

--- a/app.css
+++ b/app.css
@@ -30,10 +30,13 @@ fieldset{
   border:none;
 text-align:left;
 margin-left:30%;
-margin-top:5%;
-color:purple;
+margin-top:10%;
+color:green;
 }
 
+#score-tracker{
+  margin-bottom:5%;
+}
 
 
 
