--- a/app.css
+++ b/app.css
@@ -11,10 +11,7 @@ html {
   height: 100%; 
 }
 
-.main-container{
-margin-bottom:5%;
 
-}
 #home-page{
   margin-top:30px;
 }
@@ -33,6 +30,11 @@ margin-top:5px;
 }
 ul {
   list-style-type: none;
+  margin-bottom:10px;
+  margin-top:10px;
+ }
+ li{
+   margin-bottom:10px;
  }
   
 
@@ -45,16 +47,19 @@ ul {
   margin-bottom:5px;
 }
 fieldset{
-  
-  border:none;
+ border:none;
 text-align:left;
 margin-left:30%;
-margin-top:3%;
+margin-top:30px;
+margin-bottom:15px;
+padding-bottom:5px;
 
 
 }
 .main-container{
-  padding-bottom:20px;
+margin-bottom:5px;
+  padding-bottom:1px;
+  height:80%;
 }
 
 
@@ -78,7 +83,7 @@ margin-top:3%;
     border-radius: 25px;
     font-size: 18px;
     cursor: pointer;
-    margin-bottom:10px;
+    margin-bottom:5px;
   
     
   } 
@@ -116,7 +121,8 @@ margin-top:3%;
   }
 
   .incorrect,.correct,.no-answer{
-    
+    margin-top:5px;
+    margin-bottom:5px;
     color:blue;
   }
   
